--- a/kitty.css
+++ b/kitty.css
@@ -2,15 +2,20 @@
 
 @media screen and (min-width: 250px) {
 .small {
-		
 		content:url(images/kitten-small.png);	
 		}
 		.kittyloaf {
-		content:url(images/kittyloaf.gif);		
+		content:url(images/kittyloaf.gif);	
+		}
+		body {
+			background-image:url(images/trip1.gif);
+		}
+		
 }		
 
 @media screen and (min-width: 680px) {
 	body {
+		background-image:url(images/trip3.gif);
 		
 		content:url(images/kitten-medium.png);
 	}
@@ -18,6 +23,7 @@
 
 @media screen and (min-width: 800px) {
 	body {
+		background-image:url(images/trip1.gif) ;
 		
 		content:url(images/kitten-large.png);
 	}
