--- a/kitty.css
+++ b/kitty.css
@@ -25,7 +25,7 @@
 	body {
 		background-image:url(images/trip1.gif) ;
 		
-		content:url(images/kitten-large.png);
+		content:url(https://user-images.githubusercontent.com/28362027/30505865-2b203656-9a2c-11e7-9226-334929a33ed8.png);
 	}
 }
 
