--- a/kitty.css
+++ b/kitty.css
@@ -14,7 +14,7 @@
 
 @media screen and (min-width: 680px) {
 	body {
-		background-image:url(images/trip3.gif);
+		background-image:url(images/snowwhite.gif);
 		
 		content:url(images/kitten-medium.png);
 	}
