--- a/kitty.css
+++ b/kitty.css
@@ -1,30 +1,29 @@
 /* https://stackoverflow.com/questions/2182716/is-it-possible-to-set-the-equivalent-of-a-src-attribute-of-an-img-tag-in-css */
 @media screen and (min-width: 250px) {
 .small {
-		content:url(images/kitten-small.png);	
-		}
-		.kittyloaf {
-		content:url(images/kittyloaf.gif);	
-		}
-		body {
-			background-image:url(images/trip1.gif);
-		}
-		
-}		
-
-@media screen and (min-width: 680px) {
-	body {
-		background-image:url(images/snowwhite.gif);
-		
-		content:url(images/kitten-medium.png);
+	content:url(images/kitten-small.png);
+	align-items: center;
 	}
+.kittyloaf {
+	content:url(images/kittyloaf.gif);
+		align-items: center;
+	}
+body {
+	background-image:url(images/trip1.gif);
 }
-
+}		
+@media screen and (min-width: 680px) {
+body {
+	background-image:url(images/snowwhite.gif);
+	content:url(images/kitten-medium.png);
+	align-items: center;
+}
+}
 @media screen and (min-width: 800px) {
-	body {
-		background-image:url(images/trip1.gif) ;
-		
-		content:url(images/kitten-large.png);
-	}
+body {
+	background-image:url(images/trip1.gif) ;
+	content:url(images/kitten-large.png);
+	align-items: center;
+}
 }
 
