--- a/kitty.css
+++ b/kitty.css
@@ -2,11 +2,9 @@
 @media screen and (min-width: 250px) {
 .small {
 	content:url(images/kitten-small.png);
-	align-items: center;
 	}
 .kittyloaf {
 	content:url(images/kittyloaf.gif);
-		align-items: center;
 	}
 body {
 	background-image:url(images/trip1.gif);
@@ -16,14 +14,20 @@ body {
 body {
 	background-image:url(images/snowwhite.gif);
 	content:url(images/kitten-medium.png);
-	align-items: center;
 }
 }
 @media screen and (min-width: 800px) {
 body {
 	background-image:url(images/trip1.gif) ;
 	content:url(images/kitten-large.png);
+}
+}
+.center-verticle {
+	display: flex;
+	justify-content: center;
+	height: inherit;
+}
+.center-horizontal {
+	display: flex;
 	align-items: center;
 }
-}
-
