--- a/kitty.css
+++ b/kitty.css
@@ -2,6 +2,7 @@
 @media screen and (min-width: 250px) {
 .small {
 	content:url(images/kitten-small.png);
+	display: flex;
 	}
 .kittyloaf {
 	content:url(images/kittyloaf.gif);
