--- a/kitty.css
+++ b/kitty.css
@@ -21,7 +21,7 @@ body {
 	content:url(images/kitten-large.png);
 }
 }
-.center-verticle {
+.center-vertical {
 	display:flex;
 	justify-content: center;
 	height: inherit;
