--- a/kitty.css
+++ b/kitty.css
@@ -2,6 +2,8 @@
 @media screen and (min-width: 250px) {
 .small {
 	content:url(images/kitten-small.png);
+	width: 100vw;
+	
 	}
 .kittyloaf {
 	content:url(images/kittyloaf.gif);
