--- a/kitty.css
+++ b/kitty.css
@@ -8,13 +8,14 @@
 	}
 body {
 	background-image:url(images/trip1.gif);
+	display: block;
 }
 }		
 @media screen and (min-width: 680px) {
 .cat {
 	content:url(images/kitten-medium.png);
 	}
-	body {
+body {
 	background-image:url(images/snowwhite.gif);
 }
 @media screen and (min-width: 800px) {
